@@ -1,7 +1,8 @@
 <ul>
 	<li>V0.9.3 Devel
   	<ul>
-		<li>2003-09-10 AP - Search for PostgreSQL includes in /usr/include and /usr/include/pgsql.
+	    <li>2003-09-10 AP - correct quoting in dlg Operator, support schema qualified merge ops.
+		<li>2003-09-10 AHP - Search for PostgreSQL includes in /usr/include and /usr/include/pgsql.
 		<li>2003-09-09 HS/DP - Populate Operator combos properly.
 		<li>2003-09-09 HS - Retrieve freshly created conversions correctly.
 		<li>2003-09-09 HS - Correctly quote the ANY keyword in aggregate definitions.
